--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "email-validator": "^2.0.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "pg": "^7.4.3"
