--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
     "email-validator": "^2.0.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
