--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "hbs": "^4.0.1",
     "pg": "^7.4.3"
   }
 }
